--- a/alw_neophyten_pub/build.gradle
+++ b/alw_neophyten_pub/build.gradle
@@ -1,8 +1,11 @@
-import ch.so.agi.gretl.steps.*
+import ch.so.agi.gretl.tasks.*
+import ch.so.agi.gretl.api.TransferSet
+
+apply plugin: 'ch.so.agi.gretl'
 
 defaultTasks 'transferAlwNeophyten'
 
-task transferAlwNeophyten(type: Db2DbTask){
+task transferAlwNeophyten(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
