--- a/amb_zivilschutz_adressen_export/build.gradle
+++ b/amb_zivilschutz_adressen_export/build.gradle
@@ -19,11 +19,16 @@ def adressenDelete = 'amb_zivilschutz_adressen_staging_adressen_zivilschutz_dele
 def adressenInsert = 'amb_zivilschutz_adressen_staging_adressen_zivilschutz.sql'
 def csvFileName = "Adressen_Kanton_Solothurn_${new Date().format('yyyy-MM-dd')}.csv"
 
-defaultTasks 'deleteFile'
+defaultTasks 'uploadCsvFile'
 
 task stageAdressenZivilschutz(type: SqlExecutor){
     database = [dbUriSogis, dbUserSogis, dbPwdSogis]
     sqlFiles = [adressenDelete, adressenInsert]
+}
+
+task clearStaging(type: SqlExecutor){
+    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sqlFiles = [adressenDelete]
 }
 
 task exportAdressenZivilschutz(type: CsvExport, dependsOn: stageAdressenZivilschutz){
@@ -34,14 +39,14 @@ task exportAdressenZivilschutz(type: CsvExport, dependsOn: stageAdressenZivilsch
     encoding = "UTF-8"
     valueSeparator = ';'
     attributes = ['lokalisationsname', 'hausnummer', 'plz', 'ortschaft', 'gemeinde', 'gwr_egid', 'gwr_edid', 'koord_ost', 'koord_nord', 'status', 'objektname', 'grundstuecknummer', 'grundbuchkreis']
+    finalizedBy clearStaging
 }
 
-task clearStaging(type: SqlExecutor, dependsOn: exportAdressenZivilschutz){
-    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
-    sqlFiles = [adressenDelete]
+task deleteCsvFile(type: Delete){
+    delete "${csvFileName}"
 }
 
-task uploadFile (dependsOn: clearStaging){
+task uploadCsvFile (dependsOn: exportAdressenZivilschutz){
     description = "Upload file to FTP server"
     doLast {
         ssh.settings {
@@ -54,8 +59,5 @@ task uploadFile (dependsOn: clearStaging){
         }
         println "File uploaded to FTP server"
     }
-}
-
-task deleteFile(type: Delete, dependsOn: uploadFile){
-    delete "${csvFileName}"
+    finalizedBy deleteCsvFile
 }
