--- a/alw_grundlagen_pub/build.gradle
+++ b/alw_grundlagen_pub/build.gradle
@@ -14,6 +14,7 @@ task transferAlwGrundlagen(type: Db2Db){
             new TransferSet('alw_grundlagen_pub_drainagen.sql', 'alw_grundlagen_pub.drainagen', true),
             new TransferSet('alw_grundlagen_pub_landwirtschaftliche_gueterwege.sql',
                     'alw_grundlagen_pub.landwirtschaftliche_gueterwege', true),
-            new TransferSet('alw_grundlagen_pub_wasserversorgung.sql', 'alw_grundlagen_pub.wasserversorgung', true)
+            new TransferSet('alw_grundlagen_pub_wasserversorgung.sql', 'alw_grundlagen_pub.wasserversorgung', true), 
+            new TransferSet('alw_grundlagen_pub_drainagen_vector.sql', 'alw_grundlagen_pub.drainagen_vector', true)
     ];
 }
