--- a/afu_gerda_pub/build.gradle
+++ b/afu_gerda_pub/build.gradle
@@ -8,9 +8,13 @@ defaultTasks 'transferAfuGerda'
 task transferAfuGerda(type: Db2Db){
     sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
+    fetchSize = 100
+    batchSize = 100
     transferSets = [
             new TransferSet('afu_gerda_pub_gew_bew_ad.sql', 'afu_gerda_pub.gew_bew_ad', true),
             new TransferSet('afu_gerda_pub_erdsonde.sql', 'afu_gerda_pub.erdsonde', true),
-            new TransferSet('afu_gerda_pub_ews_max_tiefe.sql', 'afu_gerda_pub.ews_max_tiefe', true)
+            new TransferSet('afu_gerda_pub_ews_max_tiefe.sql', 'afu_gerda_pub.ews_max_tiefe', true),
+            new TransferSet('afu_gerda_pub_bohrprofil.sql', 'afu_gerda_pub.bohrprofil', true),
+            new TransferSet('afu_gerda_pub_bohrprofil_profilskizze.sql', 'afu_gerda_pub.bohrprofil_profilskizze', true),
     ];
 }
