--- a/afu_isboden_pub/build.gradle
+++ b/afu_isboden_pub/build.gradle
@@ -15,6 +15,8 @@ task transferAfuIsboden(type: Db2Db){
             new TransferSet('afu_isboden_pub_bodenerosion.sql', 'afu_isboden_pub.bodenerosion', true),
             new TransferSet('afu_isboden_pub_bodeneinheit.sql', 'afu_isboden_pub.bodeneinheit', true),
             new TransferSet('afu_isboden_pub_hinweiskarte_bodenverdichtung.sql',
-                    'afu_isboden_pub.hinweiskarte_bodenverdichtung', true)
+                    'afu_isboden_pub.hinweiskarte_bodenverdichtung', true),
+            new TransferSet('afu_isboden_pub_bodenprofilstandort_profilskizze.sql',
+                    'afu_isboden_pub.bodenprofilstandort_profilskizze', true)
     ];
 }
