[AGI_WMTS_HETZNER] try n error #1

--- a/agi_wmts_hetzner_seeder/build.gradle
+++ b/agi_wmts_hetzner_seeder/build.gradle
@@ -21,7 +21,7 @@ remotes {
         host = hetznerWmtsServerIp // floating IP
         user = "seeder"
         //identity = file(System.getProperty("user.home") + '/.ssh/id_rsa') // TODO
-        identity = sshKeyFilePathHetznerWmts
+        identity = new File(sshKeyFilePathHetznerWmts)
     }
 }
 
