--- a/afu_altlasten_pub/build.gradle
+++ b/afu_altlasten_pub/build.gradle
@@ -17,8 +17,7 @@ task transferAfuAltlasten(type: Db2Db){
 }
 
 task transferAfuAltlast4Web(type: Db2Db){
-    //todo: change sourceDB to altlast4web-Db
-    //sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+    sourceDb = [dbUriAltlast4web, dbUserAltlast4web, dbPwdAltlast4web]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('afu_altlasten_pub_belastete_standorte_altlast4web.sql',
