Import of KASO-Data and data conversion

--- a/agi_av_kaso_abgleich_pub/build.gradle
+++ b/agi_av_kaso_abgleich_pub/build.gradle
@@ -3,14 +3,24 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAgiAvKasoAbgleich'
+defaultTasks 'createOverview'
 
-task transferAgiAvKasoAbgleich(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+task transferKasoData(type: Db2Db){
+    sourceDb = [dbUriKaso, dbUserKaso, dbPwdKaso]
+    targetDb = [dbUriErf, dbUserErf, dbPwdErf]
+    transferSets = [
+            new TransferSet('av_kaso_abgleich_kaso_daten.sql', 'agi_av_kaso_abgleich.kaso_daten', true)
+    ];
+}
+
+task calculateDifferences(type: Db2Db, dependsOn: 'transferKasoData'){
+    sourceDb = [dbUriErf, dbUserErf, dbPwdErf]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('agi_av_kaso_abgleich_pub_differenzen.sql', 'agi_av_kaso_abgleich_pub.differenzen', true),
-            new TransferSet('agi_av_kaso_abgleich_pub_uebersicht_des_vergleichs.sql',
-                    'agi_av_kaso_abgleich_pub.uebersicht_des_vergleichs', true)
-    ];
+            new TransferSet('av_kaso_abgleich_pub_differenzen.sql', 'agi_av_kaso_abgleich_pub.differenzen', true)]
+}
+
+task createOverview(type: SqlExecutor, dependsOn: 'calculateDifferences'){
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ['agi_av_kaso_abgleich_pub_uebersicht_des_vergleichs.sql']
 }
