--- a/agi_av_gb_abgleich_pub/build.gradle
+++ b/agi_av_gb_abgleich_pub/build.gradle
@@ -3,14 +3,26 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'transferAgiAvGbAbgleich'
+defaultTasks 'createOverview'
 
-task transferAgiAvGbAbgleich(type: Db2Db){
-    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
+
+task transferGbData(type: Db2Db){
+    sourceDb = [dbUriGb, dbUserGb, dbPwdGb]
+    targetDb = [dbUriErf, dbUserErf, dbPwdErf]
+    transferSets = [
+            new TransferSet('agi_av_gb_abgleich_gb_daten.sql', 'agi_av_gb_abgleich.gb_daten', true)
+    ]
+}
+
+task calculateDifferences(type: Db2Db, dependsOn: 'transferGbData'){
+    sourceDb = [dbUriErf, dbUserErf, dbPwdErf]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
-            new TransferSet('agi_av_gb_abgleich_pub_differenzen.sql', 'agi_av_gb_abgleich_pub.differenzen', true),
-            new TransferSet('agi_av_gb_abgleich_pub_uebersicht_des_vergleichs.sql',
-                    'agi_av_gb_abgleich_pub.uebersicht_des_vergleichs', true)
+            new TransferSet('agi_av_gb_abgleich_pub_differenzen.sql', 'agi_av_gb_abgleich_pub.differenzen', true)
     ];
+}
+
+task createOverview(type: SqlExecutor, dependsOn: 'calculateDifferences'){
+    database = [dbUriPub, dbUserPub, dbPwdPub]
+    sqlFiles = ['agi_av_gb_abgleich_pub_uebersicht_des_vergleichs.sql']
 }
