--- a/agi_av_kaso_abgleich_pub/build.gradle
+++ b/agi_av_kaso_abgleich_pub/build.gradle
@@ -3,7 +3,8 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'createOverview'
+defaultTasks 'removeImportedData'
+
 
 task transferKasoData(type: Db2Db){
     sourceDb = [dbUriKaso, dbUserKaso, dbPwdKaso]
@@ -22,5 +23,14 @@ task calculateDifferences(type: Db2Db, dependsOn: 'transferKasoData'){
 
 task createOverview(type: SqlExecutor, dependsOn: 'calculateDifferences'){
     database = [dbUriPub, dbUserPub, dbPwdPub]
-    sqlFiles = ['agi_av_kaso_abgleich_pub_uebersicht_des_vergleichs.sql']
+    sqlFiles = [
+            'agi_av_kaso_abgleich_pub_uebersicht_des_vergleichs.sql'
+    ]
+}
+
+task removeImportedData(type: SqlExecutor, dependsOn: 'createOverview'){
+    database = [dbUriErf, dbUserErf, dbPwdErf]
+    sqlFiles = [
+            'delete_from_agi_av_kaso_abgleich_kaso_daten.sql'
+    ]
 }
