changes based on review

--- a/agi_av_gb_abgleich_pub/build.gradle
+++ b/agi_av_gb_abgleich_pub/build.gradle
@@ -3,23 +3,25 @@ import ch.so.agi.gretl.api.TransferSet
 
 apply plugin: 'ch.so.agi.gretl'
 
-defaultTasks 'RemoveImportedData'
+defaultTasks 'createOverview'
 
 
 task transferGbData(type: Db2Db){
     sourceDb = [dbUriGb, dbUserGb, dbPwdGb]
-    targetDb = [dbUriErf, dbUserErf, dbPwdErf]
+    targetDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     transferSets = [
             new TransferSet('agi_av_gb_abgleich_gb_daten.sql', 'agi_av_gb_abgleich.gb_daten', true)
     ]
 }
 
 task calculateDifferences(type: Db2Db, dependsOn: 'transferGbData'){
-    sourceDb = [dbUriErf, dbUserErf, dbPwdErf]
+    sourceDb = [dbUriSogis, dbUserSogis, dbPwdSogis]
     targetDb = [dbUriPub, dbUserPub, dbPwdPub]
     transferSets = [
             new TransferSet('agi_av_gb_abgleich_pub_differenzen.sql', 'agi_av_gb_abgleich_pub.differenzen', true)
-    ];
+    ]
+
+    finalizedBy 'removeImportedData'
 }
 
 task createOverview(type: SqlExecutor, dependsOn: 'calculateDifferences'){
@@ -29,8 +31,8 @@ task createOverview(type: SqlExecutor, dependsOn: 'calculateDifferences'){
     ]
 }
 
-task RemoveImportedData(type: SqlExecutor, dependsOn: 'createOverview'){
-    database = [dbUriErf, dbUserErf, dbPwdErf]
+task removeImportedData(type: SqlExecutor){
+    database = [dbUriSogis, dbUserSogis, dbPwdSogis]
     sqlFiles = [
             'delete_from_agi_av_gb_abgleich_gb_daten.sql'
     ]
