--- a/arp_npl_import/init.gradle
+++ b/arp_npl_import/init.gradle
@@ -10,16 +10,17 @@ allprojects {
             }
             mavenCentral()
         }
+
         dependencies {
             classpath group: 'ch.so.agi', name: 'gretl',  version: '1.0.4-SNAPSHOT'
         }
         ext {
-            sourceDbUrl = System.env.sourceDbUrl
-            sourceDbUser = System.env.sourceDbUser
-            sourceDbPass = System.env.sourceDbPass
-            targetDbUrl = System.env.targetDbUrl
-            targetDbUser = System.env.targetDbUser
-            targetDbPass = System.env.targetDbPass
+            dbUriSogis = "jdbc:postgresql://geodb-t.verw.rootso.org:5432/sogis"
+            dbUserSogis = "datasync"
+            dbPwdSogis = "datasync"
+            dbUriPub = "jdbc:postgresql://192.168.50.6/pub"
+            dbUserPub = "sogis_admin"
+            dbPwdPub = "sogis_admin"
         }
     }
 }
