[arp_npl_import]: first draft renewing. awaiting newly created db schema.

--- a/arp_npl_import/init.gradle
+++ b/arp_npl_import/init.gradle
@@ -18,6 +18,9 @@ allprojects {
             dbUriSogis = "jdbc:postgresql://geodb-t.verw.rootso.org:5432/sogis"
             dbUserSogis = "datasync"
             dbPwdSogis = "datasync"
+            dbUriSogis = "jdbc:postgresql://192.168.50.6/sogis"
+            dbUserSogis = "ddluser"
+            dbPwdSogis = "ddluser"
             dbUriPub = "jdbc:postgresql://192.168.50.6/pub"
             dbUserPub = "sogis_admin"
             dbPwdPub = "sogis_admin"
