--- a/avt_kantonsstrassen_pub/build.gradle
+++ b/avt_kantonsstrassen_pub/build.gradle
@@ -14,8 +14,8 @@ task transferAvtKantonsstrassen(type: Db2Db){
             new TransferSet('avt_kantonsstrassen_pub_baustelle.sql', 'avt_kantonsstrassen_pub.baustelle', true),
             new TransferSet('avt_kantonsstrassen_pub_strassenklassierung.sql',
                     'avt_kantonsstrassen_pub.strassenklassierung', true),
-            new TransferSet('avt_kantonsstrassen_pub_kantonsstrassen_achsstuecke.sql',
-                    'avt_kantonsstrassen_pub.kantonsstrassen_achsstuecke', true),
+            new TransferSet('avt_kantonsstrassen_pub_kategorisierte_strassen.sql',
+                    'avt_kantonsstrassen_pub.kantonsstrassen', true),
             new TransferSet('avt_kantonsstrassen_pub_kategorisierte_strassen.sql',
                     'avt_kantonsstrassen_pub.kategorisierte_strassen', true),
             new TransferSet('avt_kantonsstrassen_pub_vereinbarung.sql', 'avt_kantonsstrassen_pub.vereinbarung', true)
