--- a/afu_isboden_pub/build.gradle
+++ b/afu_isboden_pub/build.gradle
@@ -13,6 +13,7 @@ task transferAfuIsboden(type: Db2Db){
     transferSets = [
             new TransferSet('afu_isboden_pub_bodeneinheit_wald.sql', 'afu_isboden_pub.bodeneinheit_wald', true),
             new TransferSet('afu_isboden_pub_bodeneinheit_lw.sql', 'afu_isboden_pub.bodeneinheit_lw', true),
+            new TransferSet('afu_isboden_pub_bodeneinheit_gesamt.sql', 'afu_isboden_pub.bodeneinheit_gesamt', true),
             new TransferSet('afu_isboden_pub_bodenprofilstandort.sql', 'afu_isboden_pub.bodenprofilstandort', true),
             new TransferSet('afu_isboden_pub_bodenerosion.sql', 'afu_isboden_pub.bodenerosion', true),
             new TransferSet('afu_isboden_pub_bodeneinheit.sql', 'afu_isboden_pub.bodeneinheit', true),
