Removed TODO comment

--- a/agi_wmts_hetzner_seeder/build.gradle
+++ b/agi_wmts_hetzner_seeder/build.gradle
@@ -20,7 +20,7 @@ remotes {
     seedingServer {
         host = hetznerWmtsServerIp // floating IP
         user = "seeder"
-        //identity = file(System.getProperty("user.home") + '/.ssh/id_rsa') // TODO
+        //identity = file(System.getProperty("user.home") + '/.ssh/id_rsa')
         identity = new File(sshKeyFilePathHetznerWmts)
     }
 }
